--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,12 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "autoprefixer": "^10.4.19",
+    "flowbite": "^2.4.1",
+    "flowbite-svelte": "^0.46.15",
+    "postcss": "^8.4.38",
     "svelte": "^3.49.0",
+    "tailwindcss": "^3.4.4",
     "vite": "^3.0.7"
   }
 }
