--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "flowbite-svelte": "^0.46.15",
     "flowbite-svelte-icons": "^1.6.1",
     "postcss": "^8.4.40",
+    "svelte-routing": "^2.13.0",
     "tailwindcss": "^3.4.7"
   }
 }
