--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.4.38",
     "svelte": "^3.49.0",
     "tailwindcss": "^3.4.4",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "svelte-routing": "^2.13.0"
   }
 }
