--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "svelte": "^3.49.0",
     "tailwindcss": "^3.4.4",
     "vite": "^3.0.7",
-    "svelte-routing": "^2.13.0"
+    "svelte-routing": "^2.13.0",    
+    "flowbite-svelte-icons": "^1.6.1"
   }
 }
